# mcs51_emulator_h750

./: .gitmodules  .mxproject  CMakeLists.txt  LICENCE.md  README.md  STM32H750XX_FLASH.ld  h750-test1.ioc
Core/Inc/: emulator.h  stm32h7xx_it.h
Core/Src/: emulator.c  freertos.c  gpio.c  main.c  stm32h7xx_it.c  tim.c  usart.c
Drivers/RTT/: RTT_ConfigDefaults.h
Middlewares/emulator/: CMakeLists.txt  emulator.c
Middlewares/emulator/mcs51_source/: firmware.asm  firmware.hex  firmware.lst
cmake/: gcc-arm-none-eabi.cmake
cmake/stm32cubemx/: CMakeLists.txt
